# stun

./: .gitignore  .vscode.tar  CMakeLists.txt  NAT discover.excalidraw  README.md  RFC_5389.md  RFC_5780.md  build-client.py  build-server.py  build.py  server_test.py  stun-client.tar
client/: CMakeLists.txt  async.h  client.cpp  client.h  linux_client.cpp  linux_client.h  main.cpp  nat_test.cpp  nat_test.h  server_test.py  stun.h  stunAttribute.h  udpv4_client.cpp  win_client.cpp  win_client.h
client/core/: client.h  stun.h  stunAttribute.h
client/include/: async.h  client.h  log.h  stun.cpp  stun.h  stunAttribute.h  threadpool.h  timer.cpp  timer.h
client/lib/: log.h  net_core.h  timer.h
core/: stun.cpp  stun.h  stunAttribute.h
doc/: NAT discover.excalidraw  RFC_5389.md  RFC_8489.md
lib/: CMakeLists.txt  async.h  log.h  math.h  net_core.cpp  net_core.h  opts.h  random.h  threadpool.h  timer.cpp  timer.h  visit_var.h
lib/coro/: async.h  timer.cpp  timer.h
lib/include/: log.h  math.h  meta.h  net.h  opts.h
lib/include/coro/: async.h  threadpool.h  timer.h
lib/include/net/: ipv4.h  udpv4.h
lib/include/struct/: hp.h  ms_queue.h
lib/src/: net.cpp
lib/src/coro/: threadpool.cpp  timer.cpp
lib/src/net/: udpv4.cpp
lib/src/struct/: hp.cpp
scripts/: get_server_list.py
server/: server.cpp
src/: client.cpp  client.h  main.cpp  nat_test.cpp  nat_test.h
src/stun/: stun.cpp  stun.h  stunAttribute.inl
stun-client/: CMakeLists.txt  client.h  main.cpp  nat_test.cpp  udpv4_client.cpp
stun-server/: CMakeLists.txt  main.cpp
